# Voxel-Cad-Core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/instructions/: project.instructions.md
Docs/: A0-Concept.md
code/voxel-cad/: Cargo.toml
code/voxel-cad/examples/: lt_import.rs
code/voxel-cad/src/: lib.rs  little_tiles.rs
code/voxel-nano/: Cargo.toml
code/voxel-nano/src/: error.rs  lib.rs
code/voxel-nano/src/jagged_tensor/: core.rs  elem.rs  mod.rs
code/voxel-nano/src/jagged_tensor/ops/: mod.rs  padded_ijk_for_coords.rs  padded_pass_a.wgsl  padded_pass_b.wgsl
code/voxel-nano/tests/: padded_ijk_for_coords.rs
src/lib/: mod.rs
