[package]
name = "voxel_cad"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bitflags.workspace = true
bytemuck.workspace = true
enum-map.workspace = true
quartz_nbt.workspace = true
wgpu.workspace = true

[build-dependencies]
logos.workspace = true
regex = { workspace = true, features = ["unicode"] }

# [lints]
# workspace = true

[lib]
path = "src/lib.rs"
