[package]
name = "voxel-nano"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
bytemuck.workspace = true
wgpu.workspace = true
async-trait.workspace = true
thiserror.workspace = true
glam.workspace = true

[dev-dependencies]
tokio.workspace = true
pollster.workspace = true

[lib]
path = "src/lib.rs"
